# VideOVish

./: .gitignore  .prettierrc.cjs  README.md  help.css  help.html  index.html  main.js  package-lock.json  package.json  sounds.js  styles.css  tailwind.config.cjs  video-player.js  vite.config.ts
css/: styles.css
helpWindow/: help.js
html/: help.html  index.html  youtube.html
js/: help.js  video-player.js  youtube-search.js
mainWindow/: index.html  styles.css  video-player.js
src/: NotificationRenderer.vue  composables.ts  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HelpEntry.vue  HelpKey.vue  Notification.vue
src/css/: help.css  styles.css  youtube.css
src/router/: index.ts
src/views/: Help.vue  Player.vue  YouTube.vue
videovish-app/: .env.example  index.html  package.json  postcss.config.cjs  tsconfig.node.json
videovish-app/src/: NotificationRenderer.vue  composables.ts  types.ts  vite-env.d.ts  youtube-api.d.ts
videovish-app/src-tauri/: Cargo.toml  tauri.conf.json
videovish-app/src-tauri/icons/: icon.icns
videovish-app/src-tauri/src/: main.rs
videovish-app/src/components/: HelpEntry.vue  Notification.vue
videovish-app/src/router/: index.ts
videovish-app/src/views/: Help.ts  Help.vue  Player.vue  VideoChooser.vue  YouTube.vue
videovish-app/src/views/player/: Player.vue
videovish-server/: .env.example  .gitignore  README.md  app.vue  nuxt.config.ts  package.json  tailwind.config.cjs  vercel.json
videovish-server/components/: Logo.vue
videovish-server/plugins/: analytics.client.ts
videovish-server/server/api/: videovish.get.ts  videovish.post.ts
