[package]
name = "videovish-tauri"
version = "2.1.1-beta"
description = "VideOVish"
authors = ["Bernard-Borg"]
license = "GNU GPLv3"
repository = "https://github.com/Bernard-Borg/VideOVish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-all", "path-all", "fs-exists", "dialog-save", "window-all", "dialog-open", "protocol-asset", "cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
fs_extra = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
